# CGProject_

./: OpenGLTests.exe - Shortcut.lnk
Projects/DelaunayTriangulation/OpenGLTests/: Boundary.cpp  Boundary.h  CMakeLists.txt  Graph.cpp  Graph.h  OpenGLTests.vcxproj  OpenGLTests.vcxproj.filters  PlaneSweepTriangulation.cpp  PlaneSweepTriangulation.h  Points.cpp  Points.h  RandomizedIncrementalTriangulation.cpp  RandomizedIncrementalTriangulation.h  Shader.cpp  Triples.cpp  Triples.h  Window.h  imgui.ini  main.cpp
Projects/DelaunayTriangulation/OpenGLTests/DataStructures/: adjacencies.cpp  adjacencies.h  dag.cpp  dag.h  dagnode.cpp  dagnode.h  point2d.cpp  point2d.h  triangle.cpp  triangle.h
Projects/DelaunayTriangulation/OpenGLTests/Shaders/: shader.vert
Projects/DelaunayTriangulation/OpenGLTests/x64/Debug/: OpenGLTests.exe.recipe  vc143.idb
Projects/DelaunayTriangulation/OpenGLTests/x64/Debug/OpenGLTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Projects/DelaunayTriangulation/OpenGLTests/x64/Release/: OpenGLTests.exe.recipe
Projects/DelaunayTriangulation/x64/Release/: imgui.ini
